projects/instavote/dev/db-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: db
spec:
  replicas: 1
  selector:
    tier: back
    app: postgres
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: postgres
        role: db
        tier: back
        version: "9.4"
    spec:
      containers:
      - image: postgres:9.4
        imagePullPolicy: Always
        name: db
        ports:
        - containerPort: 5432
          protocol: TCP
        securityContext:
          privileged: true
#          capabilities:
#            add:
#              - CHOWN
