projects/instavote/dev/results-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata: 
  name: results
  namespace: instavote
spec: 
  xxx
