projects/instavote/dev/db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: db
    tier: back
  name: db
spec:
  selector:
    role: db
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
