projects/instavote/dev/vote-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    role: vote
spec:
  selector:
    role: vote
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30000
  type: NodePort
